--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,6 +22,12 @@
         android:theme="@style/Theme.MyApplicationActivityTest"
         tools:replace="android:theme">
 
+        <service
+            android:name=".EmpaticaConnectionService"
+            android:enabled="true"
+            android:exported="true"
+            android:foregroundServiceType="connectedDevice"></service>
+
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name"
