--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -25,5 +25,33 @@
         ]
       }
     }
+  },
+  "api": {
+    "MFHBooggiiAPP": {
+      "service": "AppSync",
+      "providerPlugin": "awscloudformation",
+      "output": {
+        "authConfig": {
+          "defaultAuthentication": {
+            "authenticationType": "API_KEY",
+            "apiKeyConfig": {
+              "apiKeyExpirationDays": 30,
+              "description": "api key description"
+            }
+          },
+          "additionalAuthenticationProviders": [
+            {
+              "authenticationType": "AWS_IAM"
+            },
+            {
+              "authenticationType": "AMAZON_COGNITO_USER_POOLS",
+              "userPoolConfig": {
+                "userPoolId": "authmfhbooggiiapp185fa92b"
+              }
+            }
+          ]
+        }
+      }
+    }
   }
 }
