--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,13 +52,13 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
     // Amplify core dependency
-//    implementation 'com.amplifyframework:aws-core:1.+'
-    implementation 'com.amplifyframework:aws-api:1.+'
-    implementation 'com.amplifyframework:aws-auth-cognito:1.+'
-    implementation 'com.amplifyframework:aws-datastore:1.+'
-    implementation 'com.amazonaws:aws-android-sdk-auth-userpools:2.+'
-    implementation 'com.amazonaws:aws-android-sdk-auth-ui:2.+'
+    implementation 'com.amplifyframework:core:1.28.2'
+    implementation 'com.amplifyframework:aws-api:1.28.2'
+    implementation 'com.amplifyframework:aws-auth-cognito:1.28.2'
+    implementation 'com.amplifyframework:aws-datastore:1.28.2'
+    implementation 'com.amazonaws:aws-android-sdk-auth-userpools:2.33.0'
+    implementation 'com.amazonaws:aws-android-sdk-auth-ui:2.33.0'
 
     // Support for Java 8 features
-    coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:1.+'
+    coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:1.1.5'
 }
