Connected FirstFragment events to db.

--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,9 @@
 *.iml
 .gradle
 /local.properties
-/.idea/caches
+/.idea/*
+/.idea/*.*
 /.idea/libraries
-/.idea/modules.xml
-/.idea/workspace.xml
-/.idea/navEditor.xml
-/.idea/misc.xml
-/.idea/assetWizardSettings.xml
 .DS_Store
 /build
 /captures
