--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,7 +30,7 @@
         android:roundIcon="@mipmap/booggii_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.MyApplicationActivityTest"
-        tools:replace="android:theme">
+        tools:replace="android:name">
 
         <service
             android:name=".EmpaticaConnectionService"
