--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,8 @@
+
 plugins {
     id 'com.android.application'
+    id 'com.google.gms.google-services'
+    id 'com.google.firebase.crashlytics'
 }
 
 android {
@@ -42,7 +45,10 @@ dependencies {
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'com.squareup.okhttp:okhttp:2.7.5'
     implementation 'com.empatica.empalink:E4link:1.0.0@aar'
+    implementation 'com.google.firebase:firebase-bom:29.0.0'
+    implementation 'com.google.firebase:firebase-crashlytics:17.2.2'
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+
 }
