--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,6 @@
     <uses-permission android:name="android.permission.BLUETOOTH" />
     <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
     <uses-permission android:name="android.permission.SET_ALARM"/>
@@ -30,7 +29,7 @@
         android:roundIcon="@mipmap/booggii_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.MyApplicationActivityTest"
-        tools:replace="android:name">
+        tools:replace="android:theme">
 
         <service
             android:name=".EmpaticaConnectionService"
