--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,6 +47,7 @@ dependencies {
     implementation 'com.empatica.empalink:E4link:1.0.0@aar'
     implementation 'com.google.firebase:firebase-bom:29.0.0'
     implementation 'com.google.firebase:firebase-crashlytics:17.2.2'
+    implementation 'org.jetbrains:annotations:15.0'
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
